hphp/hack/test/typecheck/public_function_with_attribute.php.exp
File "public_function_with_attribute.php", line 3, characters 8-8:
Encountered unexpected token 'public'. (Parsing[1002])
