hphp/hack/test/typecheck/public_function_with_attribute.php
<?hh // partial
<<__rx>>
public function foo() : void { ; }
